- 
    Bug 
- 
    Resolution: Fixed
- 
    P1: Critical 
- 
    6.9.0
- 
    None
- 
    Qt 6.9.0 Android arm64
- 
        
- 
        a8629dd5f (dev), 273fb06d6 (6.10)
This example fails to load on android
WebView {
    Component.onCompleted: loadHtml("<html><body>Hello</body></html>", "https://example.com") 
} 
and displays the following percent encoded string of the same html
"%3Chtml%3E%0A%3Cbody%3E%0AHello%0A%3C%2Fbody%3E%0A%3C%2Fhtml%3E"
While digging into this, I found, that the html content is QUrl::toPercentEncoding(html) encoded and all the html tags are stripped away.
The offending commit is https://github.com/qt/qtwebview/commit/9feccda3138fe0d6c88bf8ba99eb4b57965e95a6
Why someone wrote this line and pushed it to production is beyond my comprehension.
As of now Android WebView in 6.9.0 is useless for loading simple html content.
- is duplicated by
- 
                    QTBUG-134723 [REG 6.8.0 -> 6.8.1] WebView's loadHtml() with BaseURL has issues loading HTML content. -         
- Closed
 
-         
- resulted from
- 
                    QTBUG-129303 [Android] WebView.loadHtml() fails to correctly encode certain strings? -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-136082 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 661866,1 | Handle non data base urls schemes in loadHtml | 6.9 | qt/qtwebview | Status: NEW | 0 | 0 | 
| 679903,1 | Handle non data base urls schemes in loadHtml | tqtc/lts-6.8 | qt/tqtc-qtwebview | Status: NEW | 0 | 0 | 
| 641024,14 | Handle non data base urls schemes in loadHtml | dev | qt/qtwebview | Status: MERGED | +2 | 0 | 
| 661715,2 | Handle non data base urls schemes in loadHtml | 6.10 | qt/qtwebview | Status: MERGED | +2 | 0 |